1 file modified, 1 added, 1 deleted

--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
   <section id="event-details-container">
        <h1>Stu's Driving School</h1>
  
-       <p><i class="material-icons">calendar_today</i> October 30</p>
-       <p><i class="material-icons">location_city</i> Gateshead</p>
        <button id="startRsvp">Log In</button>
   
  </section>
+
 
   <hr>
 
   <section id="firebaseui-auth-container"></section>
 
   <section id="description-container">
-      <h2>What we'll be doing</h2>
-      <p>Join us for a day full of Firebase Workshops and Pizza!</p>
+      <h2>Work in progress:</h2>
+      <ol>
+        <li>Log in authorisation
+          <li>Look after pupil information (CRUD)
+            <li>Look after bookings
+              
+      </ol>
+
   </section>
 
    <section id="guestbook-container">
