--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
        <h1>Stu's Driving School</h1>
  
        <button id="startRsvp">Log In</button>
+       <button id="toDoList">To Do</button>
   
  </section>
 
