Footer bar added
Doesn't work but looks quite nice

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 <div id="app">
-  <img src="https://www.koolbadges.co.uk/images/thumbnails/learner-l-plate-hen-party-badge-400x400.jpg" />
+  <img src="https://www.koolbadges.co.uk/images/thumbnails/learner-l-plate-hen-party-badge-400x400.jpg" width = 20%/>
 
   <section id="event-details-container">
        <h1>Stu's Driving School</h1>
@@ -58,6 +58,19 @@
    <section id="guestbook"></section>
 
  </section>
+
+
+
+	<!-- Footer Bar-->
+  <div id="footer-bar" class="footer-bar footer-bar-detached">
+   
+		  <a href="#"><i class="bi bi-heart-fill font-15"></i><span>Pages</span></a>
+      <a href="#"><i class="bi bi-star-fill font-17"></i><span>Features</span></a>
+      <a href="#" class="active-nav"><i class="bi bi-house-fill font-16"></i><span>Home</span></a>
+      <a href="#"><i class="bi bi-image font-16"></i><span>Media</span></a>
+      <a href="#" data-bs-toggle="offcanvas" data-bs-target="#menu-main"><i class="bi bi-list"></i><span>Menu</span></a>
+    </div>
+
 
 </div>
 </body>
