Move to firebase hosting public

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
     <div id="footer-bar" class="footer-bar footer-bar-detached">
       <a id="pupilsMenu" onclick="showPupils()">
         <i class="bi bi-people font-16"></i>
-        <span>Pupils</span>
+        <span>Pupils 2</span>
       </a>
       <a id="scheduleMenu" onclick="showSchedule()">
          <i class="bi bi-calendar-week font-16"></i>
