Got add pupilworking!
At last!

--- a/public/index.html
+++ b/public/index.html
@@ -560,49 +560,50 @@ Lesson History<hr>
 						<i class="bi bi-person-circle font-14">Forename</i>
             <div class="form-custom form-label form-icon mb-3">
 							<input type="text" class="form-control rounded-xs" id="foreName" placeholder="First name"/>
-							<label for="lblForename" class="color-theme">Forename:</label>
+							<label for="foreName" class="color-theme">Barry</label>
 							<span>(required)</span>
 						</div>
 
             <i class="bi bi-person-circle font-14">Surname</i>
             <div class="form-custom form-label form-icon mb-3">
 							<input type="text" class="form-control rounded-xs" id="surName" placeholder="Surname"/>
-							<label for="lblSurname" class="color-theme">Surname:</label>
+							<label for="surName" class="color-theme">Scott</label>
 							<span>(required)</span>
 						</div>
 
             <i class="bi bi-geo-alt-fill font-14">Home address</i>
             <div class="form-custom form-label form-icon mb-3">
-							<label for="lblAddress" class="color-theme">Address:</label>
-							<span>(required)</span>
+		
               <textarea class="form-control rounded-xs" id="address" placeholder="Home address"/>
 							</textarea>
+              <label for="address" class="color-theme">Cilit Bang Towers, Bangor</label>
+							<span>(required)</span>
 						</div>
 
             <i class="bi bi-at font-16">Email address</i>
 						<div class="form-custom form-label form-icon mb-3">
 							<input type="text" class="form-control rounded-xs" id="pupilemail" placeholder="Email address"/>
-							<label for="lblpupilemail" class="color-theme">Email Address</label>
+							<label for="pupilemail" class="color-theme">bang@thedirtisgone.com</label>
 							<span>(required)</span>
 						</div>
             <i class="bi bi-telephone-fill font-12">Telephone number</i>    
             <div class="form-custom form-label form-icon mb-3">
 							<input type="text" class="form-control rounded-xs" id="telephone" placeholder="Telephone number"/>
-							<label for="lbltelephone" class="color-theme">Telephone No:</label>
+							<label for="telephone" class="color-theme">013456789</label>
 							<span>(required)</span>
 						</div>
 
 						<i class="bi bi-patch-check" font-12">Driving license number</i>
               <div class="form-custom form-label form-icon mb-3">            
 							<input type="text" class="form-control rounded-xs" id="license" placeholder="Driving license number"/>
-							<label for="lbllicense" class="color-theme">Driving license:</label>
+							<label for="license" class="color-theme">01283456789</label>
 							<span>(required)</span>
 						</div>
 
             <i class="bi bi-calendar4-event font-12">Date of birth</i>
              <div class="form-custom form-label form-icon mb-3">
 							<input type="date" class="form-control rounded-xs" id="dob" placeholder="Date of birth"/>
-							<label for="lbldob" class="color-theme">Date of birth</label>
+							<label for="dob" class="color-theme">01:04:1802</label>
 						</div>
 
 
@@ -615,11 +616,10 @@ Lesson History<hr>
                 <option value="advanced">Advanced</option>
                 <option value="prospective">Prospective</option>
               </select>
-							<label for="c2" class="color-theme">Status</label>
+							<label for="status" class="color-theme">Status</label>
 						</div>
-						<button class='btn rounded-sm btn-m gradient-blue text-uppercase font-700 mt-4 mb-3 btn-full shadow-bg shadow-bg-s'>Create Pupil Account</button>
-					
-						<br>		
+						<button type="submit" class='align-self-center btn rounded-sm btn-m gradient-blue text-uppercase font-700 mt-4 mb-3 btn-full shadow-bg shadow-bg-s'>Create Pupil Account</button>
+        		<br>		
             </form>
 							</div>
           </div>
